Avoid double border in contact area

--- a/plugins/arDominionB5Plugin/scss/_layout.scss
+++ b/plugins/arDominionB5Plugin/scss/_layout.scss
@@ -53,6 +53,10 @@ body {
   .field p:last-child {
     margin-bottom: 0;
   }
+
+  .contact-info:not(:last-child) {
+    border-bottom: $border-width solid $border-color;
+  }
 }
 
 #atom-digital-object-carousel {
